# charta-core

./: Cargo.toml  README.md  semantics.md
src/: error.rs  lib.rs
src/ir/: evidence.rs  mod.rs  schema.rs  validation.rs
