[package]
name = "charta-core"
version = "0.1.0"
edition = "2021"
description = "Charta core language semantics and IR validation"
license = "MIT OR Apache-2.0"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
jsonschema = "0.17"
thiserror = "1.0"

[dev-dependencies]
rstest = "0.18"
